<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/latitudeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_latitude" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/longitudeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/example_longitude" />
</LinearLayout>