<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startRun"
        android:orientation="vertical"
        android:id="@+id/simple">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/primary_text_dark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simple_description"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorTransparentWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startRun"
        android:orientation="vertical"
        android:id="@+id/medium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_description"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorTransparentWhite"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startRun"
        android:orientation="vertical"
        android:id="@+id/hard">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_description"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorTransparentWhite"/>
    </LinearLayout>

</LinearLayout>