<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_items_bg"
    android:padding="2dp">

    <RelativeLayout
        android:id="@+id/explore_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:background="@drawable/main_items_bg">

        <ImageView
            android:id="@+id/explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/explore"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/training_pic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_text_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/explore"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/compete_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:background="@drawable/main_items_bg">

        <ImageView
            android:id="@+id/compete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/comptete"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/competition_pic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_text_bg"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="@string/comptete"
            android:textSize="20sp"
            android:layout_marginBottom="2dp"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/affix_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:background="@drawable/main_items_bg">

        <ImageView
            android:id="@+id/affix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/affix"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/affixment_pic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/affix"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:background="@drawable/main_text_bg"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="2dp"
            android:paddingTop="5dp"/>
    </RelativeLayout>

</LinearLayout>